--- a/index.html
+++ b/index.html
@@ -227,24 +227,152 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
+              <h4>Indesign</h4>
+              <p>Indesign</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fundamentals of Design"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Balance"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Contrast"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG4.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Unity"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG5.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Hierarchy"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG6.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Emphasis"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG7.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Proportion"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG8.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Rhythm"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG9.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Texture"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FUNDAMENTALSJPG10.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Indesign</h4>
+              <p>Indesign</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/FUNDAMENTALSJPG10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Whitespace"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
+              <h4>Illustrator</h4>
+              <p>Illustrator</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
